--- a/app/containers/ComposeBox/styles.css
+++ b/app/containers/ComposeBox/styles.css
@@ -1,7 +1,52 @@
+.send {
+    background-color: #000000;
+    background: rgba(0,0,0,.8);
+    border: 1px solid transparent;
+    color: #fff;
+    display: block;
+    padding: 9px 16px 8px 17px;
+    text-align: center;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.15);
+    border-radius: .2rem;
+}
+
+.fileUpload {
+    cursor: pointer;
+    font-size: 1.5rem;
+    width: 2rem;
+}
+
 .dashboardCompose {
     color: blue
 }
 
+.composeButtons {
+    display: flex;
+}
+
 .composeContainer {
     width: inherit;
+}
+
+.composeBox {
+    border-radius: 3px 3px 0 0;
+    background-color: #E5E5E5;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.profileIcon {
+        float: left;
+    img {
+	width: 2rem;
+	height: 2rem;
+	border-radius: .2rem;
+    }
+}
+
+.composeTextArea {
+    background-color: white;
+    display: inline;
+    z-index: 10;
 }
