progress on the compose box

--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -25,6 +25,9 @@ body.jsOpenSansLoaded {
   width: 100%;
 }
 
+textarea, input {
+    outline: none;
+}
 .wrapper {
   max-width: inherit;
   margin: 0 auto;
