--- a/app/components/Dropdown/styles.css
+++ b/app/components/Dropdown/styles.css
@@ -11,9 +11,17 @@
     border-radius: 3px;
     background: #FFF;
     position: absolute;
+    left: -55%;
+    top: 120%;
 }
 
 .MenuOption {
+    cursor: pointer;
+    padding: .2rem 1rem;
+    &:hover {
+	color: #fff;
+	background: #3b88c3;
+    }
     span {
 	white-space: nowrap;
     }
