--- a/app/containers/ComposeBox/styles.css
+++ b/app/containers/ComposeBox/styles.css
@@ -1,3 +1,5 @@
+textarea, input, button { outline: none; }
+
 .send {
     margin-left: auto;
     background-color: #000000;
@@ -9,11 +11,29 @@
     text-align: center;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.15);
     border-radius: .2rem;
+    cursor: pointer;
 }
 
+.sendStat {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
 .fileUpload {
     cursor: pointer;
     font-size: 1.5rem;
+}
+
+.quickUpload {
+    margin-right: 0;
+    position: absolute;
+    right: 2.75rem;
+    top: 1rem;
+    z-index: 1;
+    height: inherit;
+    width: inherit;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
 
 .disabled {
@@ -28,14 +48,28 @@
 .dashboardCompose {
     color: blue
 }
+.controls {
+
+}
 
 .composeButtons {
     display: flex;
     align-items: center;
+    align-content: center;
+    margin-left: 3rem;
+
+    div {
+	align-content: center;
+	display: flex;
+    }
+    
     i {
 	font-size: 1.5rem;
 	width: 2rem;
 	text-align: center;
+    }
+    span {
+	font-size:1rem;
     }
 }
 
@@ -63,4 +97,14 @@
     display: block;
     z-index: 10;
     margin-left: 3rem;
+    line-height: 2rem;
+    border-radius: .15rem;
+    border: 1px solid gray;
+    outline: none;
+    cursor: text;
+    height: 2rem;
+}
+
+.hide {
+    display: none;
 }
