click outside of box ^^ probably a good place to save

--- a/app/containers/ComposeBox/styles.css
+++ b/app/containers/ComposeBox/styles.css
@@ -105,6 +105,9 @@ textarea, input, button { outline: none; }
     height: 2rem;
 }
 
+.composeTextArea.expand {
+    height: 4rem;
+}
 .hide {
     display: none;
 }
