just need to remvoe file preview child to parent communication avoiding redux saga and sticking to event at first

--- a/app/containers/filePreviewCard/styles.css
+++ b/app/containers/filePreviewCard/styles.css
@@ -1,10 +1,13 @@
 .preview {
-
+    height: 4rem;
+    width: 4rem;
 }
 
 .previewImg {
     height: 4rem;
     width: 4rem;
+    border: 1px solid #aaa;
+    border-radius: .2rem;
 }
 
 .previewClose {
