--- a/app/containers/ComposeBox/styles.css
+++ b/app/containers/ComposeBox/styles.css
@@ -103,11 +103,19 @@ textarea, input, button { outline: none; }
     outline: none;
     cursor: text;
     height: 2rem;
+    padding: .25rem .75rem;
 }
 
 .composeTextArea.expand {
     height: 4rem;
 }
+
+.composeTextArea.expandPreview {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-style: none
+}
+
 .hide {
     display: none;
 }
