--- a/app/containers/ComposeBox/styles.css
+++ b/app/containers/ComposeBox/styles.css
@@ -7,7 +7,7 @@ textarea, input, button { outline: none; }
     border: 1px solid transparent;
     color: #fff;
     display: block;
-    padding: 9px 16px 8px 17px;
+    padding: 5px 18px 5px 18px;
     text-align: center;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.15);
     border-radius: .2rem;
@@ -22,6 +22,8 @@ textarea, input, button { outline: none; }
 .fileUpload {
     cursor: pointer;
     font-size: 1.5rem;
+    border: 1px solid rgba(0, 0, 0, .0);
+    padding: .3rem;
 }
 
 .quickUpload {
@@ -43,6 +45,8 @@ textarea, input, button { outline: none; }
 .fileUpload:hover {
     border: 1px solid rgba(0, 0, 0, .5);
     border-radius: .2rem;
+    background-color: rgba(255,255,255,0.25);
+    background-image: linear-gradient(rgba(255,255,255,0),rgba(0,132,180,0.1));
 }
 
 .dashboardCompose {
@@ -57,6 +61,7 @@ textarea, input, button { outline: none; }
     align-items: center;
     align-content: center;
     margin-left: 3rem;
+    margin-top: .75rem;
 
     div {
 	align-content: center;
