--- a/client/app/containers/App/styles.css
+++ b/client/app/containers/App/styles.css
@@ -6,16 +6,11 @@ body {
   width: 100%;
 }
 
-a {
-    text-decoration: none !important;
-    color: black !important;
-}
-
 body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
-body.jsOpenSansLoaded {
+body.fontLoaded {
   font-family: 'Open Sans', Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
@@ -25,11 +20,8 @@ body.jsOpenSansLoaded {
   width: 100%;
 }
 
-textarea, input {
-    outline: none;
-}
 .wrapper {
-  max-width: inherit;
+  max-width: 100%;
   margin: 0 auto;
   display: -webkit-flex;
   display: -ms-flexbox;
