--- a/client/app/containers/ProfilePage/styles.css
+++ b/client/app/containers/ProfilePage/styles.css
@@ -1,3 +1,8 @@
+.profileContainer {
+    padding-top: 1rem;
+    background-color: #f5f8fa!important;
+}
+
 .ProfileAvatar {
     width: 11rem;
     height: 11rem;
