--- a/client/app/containers/ProfilePage/styles.css
+++ b/client/app/containers/ProfilePage/styles.css
@@ -8,6 +8,7 @@
     height: 11rem;
     border: 5px solid #fff;
     border-radius: .3rem;
+    cursor: pointer;
     
     img {
 	height: 100%;
@@ -17,5 +18,42 @@
 }
 
 .ProfileSidebar {
+
+}
+
+.ProfileHeaderCard {
+    a {
+	margin: 0px;
+	max-height: 0.25rem;
+    }
+    h1 {
+	margin: 0;
+	white-space: nowrap;
+	a {
+	    color: black;
+	}
+    }
+    h2 {
+	margin: 0;
+	a {
+	    height: 12px;
+	}
+	    span {
+		color: black;
+		font-size: 14px;
+		color: #8899a6;
+	}
+    }
+}
+
+.profileSideOffset {
+    position: absolute;
+    width: 100%;
+    z-index: 50;
+    top: -10rem;
+}
+
+.ProfileHeaderBio {
+    word-wrap: break-word;
 
 }
