--- a/client/app/containers/ProfilePageLeft/styles.css
+++ b/client/app/containers/ProfilePageLeft/styles.css
@@ -53,19 +53,53 @@
 
 }
 
-.ProfileHeaderCardEditing {
+.ProfileLeftEditingContainer {
+
+}
+
+.ProfileLeftEditingContent {
     background-color: #e5e5e5;
     border-radius: .1rem;
-    display: none;
+    border-radius: 5px;
+    padding: 10px 15px 6px 15px;
+    position: relative;
+    z-index: 3;
+    
 
-    .active {
-	display: block;
 
-	.input {
+	input {
 	    background-color: #fff;
 	    border: 1px solid #e1e8ed;
 	    display: inline-block;
+	    border-radius: .3rem;
 	}
+
+
+}
+
+.ProfileInputEdit {
+    border-color: #999999 !important;
+    background-color: #fff;
+    border: 1px solid #e1e8ed;
+    padding: 4px 7px;
+    width: 100%;
+    margin-bottom: .4rem;
+}
+
+.ProfileHeaderCardEditingName {
+    color: #292f33;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: normal;
+
+
+    input {
     }
 
+}
+
+.ProfileCardEditingScreenName {
+    color: #000000;
+    margin-bottom: .4rem;
+    margin-left: .5rem;
 }
