--- a/client/app/containers/ProfilePageLeft/styles.css
+++ b/client/app/containers/ProfilePageLeft/styles.css
@@ -103,3 +103,23 @@
     margin-bottom: .4rem;
     margin-left: .5rem;
 }
+
+.userColorButtonContainer {
+    cursor: pointer;
+}
+
+.userColorButton {
+    border: 0;
+    border-radius: 4px;
+    color: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    padding: 4px 6px;
+    text-align: left;
+    width: 100%;
+    cursor: pointer;
+}
+
+.userColor {
+    background-color: #000000;
+}
